--- a/LibraryAccountingApp.PL.WebApp/LibraryAccountingApp.PL.WebApp.csproj
+++ b/LibraryAccountingApp.PL.WebApp/LibraryAccountingApp.PL.WebApp.csproj
@@ -9,8 +9,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryAccountingApp.DAL.EFCore\LibraryAccountingApp.DAL.EFCore.csproj" />
+    <ProjectReference Include="..\LibraryAccountingApp.Entities\LibraryAccountingApp.Entities.csproj" />
   </ItemGroup>
 
 </Project>
