Added Identity and edited index page accordingly

--- a/LibraryAccountingApp.PL.WebApp/appsettings.json
+++ b/LibraryAccountingApp.PL.WebApp/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LibraryAccountingAppPLWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LibraryAccountingApp.PL.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
