--- a/LibraryAccountingApp.BLL.Core/LibraryAccountingApp.BLL.Core.csproj
+++ b/LibraryAccountingApp.BLL.Core/LibraryAccountingApp.BLL.Core.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryAccountingApp.DAL.Contracts\LibraryAccountingApp.DAL.Contracts.csproj" />
+    <ProjectReference Include="..\LibraryAccountingApp.Entities\LibraryAccountingApp.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
