--- a/LibraryAccountingApp.PL.WebApp/LibraryAccountingApp.PL.WebApp.csproj
+++ b/LibraryAccountingApp.PL.WebApp/LibraryAccountingApp.PL.WebApp.csproj
@@ -15,6 +15,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\LibraryAccountingApp.BLL.Core\LibraryAccountingApp.BLL.Core.csproj" />
     <ProjectReference Include="..\LibraryAccountingApp.DAL.EFCore\LibraryAccountingApp.DAL.EFCore.csproj" />
     <ProjectReference Include="..\LibraryAccountingApp.Entities\LibraryAccountingApp.Entities.csproj" />
   </ItemGroup>
