Moved from using InMemoryDatabase onto Npgsql+Postgresql

--- a/LibraryAccountingApp.PL.WebApp/appsettings.Development.json
+++ b/LibraryAccountingApp.PL.WebApp/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LibraryConnection": "host=localhost;database=library;username=;password="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
