--- a/LibraryAccountingApp.PL.WebApp/appsettings.json
+++ b/LibraryAccountingApp.PL.WebApp/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LibraryAccountingAppPLWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LibraryAccountingApp.PL.WebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LibraryConnection": "host=localhost;database=library;username=;password="
   }
 }
