--- a/LibraryAccountingApp.DAL.EFCore/LibraryAccountingApp.DAL.EFCore.csproj
+++ b/LibraryAccountingApp.DAL.EFCore/LibraryAccountingApp.DAL.EFCore.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190713014554_InitialCreate.cs" />
+    <Compile Remove="Migrations\20190713014554_InitialCreate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
   </ItemGroup>
