--- a/LibraryAccountingApp.PL.WebApp/appsettings.json
+++ b/LibraryAccountingApp.PL.WebApp/appsettings.json
@@ -7,5 +7,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LibraryConnection": "host=localhost;database=library;username=;password="
+  },
+  "Roles": [
+    "Administrator",
+    "User"
+  ],
+  "Administrators": {
+    "admin": "admin",
+    "admin2": "admin2"
   }
 }
